# Splender

./: .gitignore  CMakeLists.txt  README.md  build_verbose.txt  buildcommand.txt
resources/: app.rc  app.rc.in
src/: app.cpp  app.h  globals.cpp  globals.h  loader.cpp  loader.h  main.cpp  main_gl.cpp  renderer.cpp  renderer.h  ui.cpp  ui.h  usersettings.cpp  usersettings.h
